# metatracer

./: .gitignore  LICENSE  README.md  pyproject.toml
conda/: meta.yaml
metatracer/: annotate.py  cli.py  filter.py  reference_build.py
tests/: test_annotate.py  test_filter.py  test_reference_build.py
