[project]
name = "metatracer"
version = "0.1.0"
description = "MetaTracer metatranscriptomic analysis pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click>=8.1",
  "biopython>=1.80",
  "pysam>=0.21",
  "intervaltree>=3.1",
  "ete3>=3.1.3",
  "tqdm>=4.64",
  "mtsv-tools>=2.1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
]

[project.scripts]
metatracer = "metatracer.cli:main"

